# pdas-experiments

./: .gitignore  CMakeLists.txt  README.md
cases/: gen_ic_files.py  gen_mesh.sh
cases/mmldecset23/riemann/figures/pdas_exp_plot/: defaults.py
cases/mmldecset23/riemann/pod_bases/topRightPress_1p0_to_2p0/: basis_input.yaml
cases/mmldecset23/riemann/runs/decomp/: decomp_rom_all.yaml  decomp_rom_three.yaml
cases/mmldecset23/riemann/runs/fom/: fom_runs.yaml
cases/mmldecset23/riemann/runs/rom/: rom_runs.yaml
cases/mmldecset23/swe/figures/: plot_pod_energy.py  plot_projection_error.py  plot_state_error.py  plot_state_error_additive.py
cases/mmldecset23/swe/figures/pdas_exp_plot/: defaults.py
cases/mmldecset23/swe/pod_bases/coriolis_0p0_to_n4p0/: basis_input.yaml
cases/mmldecset23/swe/runs/decomp/: decomp_rom.yaml
cases/mmldecset23/swe/runs/fom/: fom_runs.yaml
cases/mmldecset23/swe/runs/rom/: rom_runs.yaml
include/pdas-exp/: decomp.hpp  mono_fom.hpp  mono_lspg.hpp  observer.hpp  parser.hpp
python/: gen_bases.py  gen_runs.py  gen_sample_mesh.py
python/pdas_exp/: defaults.py  gen_runs.py  utils.py
src/: runner.cc
